<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_type">pl.adriankurek.mbms.login</string>
	<string name="app_name"><b>MoviesAndBooksManagementSystem</b></string>
	<string name="app_package">pl.adriankurek.mbms</string>
    <string name="welcome">Welcome %s</string>
	<string name="logout_button">Logout</string>
	<string name="fetch_movies_button">Fetch Movies</string>
	<string name="fetch_artists_button">Fetch Artists</string>
	<string name="fetch_books_button">Fetch Books</string>
	<string name="fetch_movie_actors_button">Fetch Actors</string>
	<string name="fetch_movie_photos_button">Fetch Photos</string>
	<string name="fetch_batch_logs_button">Fetch Batch Logs</string>
	<string name="fetch_artist_news_button">Fetch Artist News</string>
	<string name="fetch_book_news_button">Fetch Book News</string>
	<string name="fetch_movie_news_button">Fetch Movie News</string>
	<string name="clear_button">Clear</string>
</resources>
